# libxeddsa

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  FindSodium.cmake  LICENSE  README.md
.github/workflows/: build-and-test.yml  test-on-push.yml
.travis/: before_deploy.sh  before_install.sh  cmake.sh  make.sh  test.sh
docs/: Doxyfile  conf.py  doxygen.conf  index.rst  installation.rst  xeddsa.rst
emscripten/: exported_functions.txt  libxeddsa-wrapper.js
include/: xeddsa.h
ref10/: CMakeLists.txt  README.md
ref10/crypto_core/: README  crypto_core.h  crypto_core_salsa20.h
ref10/crypto_hash/: README  crypto_hash.h  crypto_hash_sha512.h
ref10/crypto_hashblocks/: crypto_hashblocks.h  crypto_hashblocks_sha512.h
ref10/crypto_rng/: crypto_rng.h  crypto_rng_salsa20.h
ref10/crypto_scalarmult/: crypto_scalarmult.h  crypto_scalarmult_curve25519.h  fe.h
ref10/crypto_sign/: crypto_sign.h  crypto_sign_ed25519.h  fe.h  ge.h  sc.h
ref10/crypto_stream/: crypto_stream.h  crypto_stream_salsa20.h
ref10/crypto_verify/: README  crypto_verify.h  crypto_verify_32.h
ref10/fastrandombytes/: fastrandombytes.c  randombytes.h
ref10/include/: cross_platform.h
ref10/kernelrandombytes/: getentropy.c  getentropy2.c  getrandom.c  getrandom2.c  getrandom3.c  kernelrandombytes.h  rtlgenrandom.c  test.c  urandom.c
src/: curve25519_pub_to_ed25519_pub.c  curve25519_sign.c  ed25519.c  pub_conversion.c  pub_derivation.c  seed_priv_utils.c  utils.c  version.c  x25519.c  xeddsa.c
test/: test.c  test.h  test_conversion_uniqueness.c  test_libsodium_compatibility.c  test_pub_derivation.c  test_signing.c
